--- a/package.json
+++ b/package.json
@@ -1,34 +1,43 @@
 {
-  "dependencies": {},
-  "description": "Search for dogs",
+  "name": "@pawangujral/webpack-ui-template",
+  "author": "Pawan Gujral",
+  "email": "gujral87@gmail.com",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/pawangujral/template.git",
+    "bugs": "https://github.com/pawangujral/template.git/issues"
+  },
+  "description": "Webpack template for quick vanilla project",
+  "version": "1.0.0",
   "devDependencies": {
-    "@ridedott/eslint-config": "^1.0.0",
-    "@types/jest": "^25.1.2",
+    "@ridedott/eslint-config": "^1.1.44",
+    "@types/jest": "^26.0.23",
     "@types/webpack-env": "^1.16.0",
     "autoprefixer": "^9.7.4",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.4.2",
+    "css-loader": "^5.2.6",
     "cssnano": "^4.1.11",
     "eslint": "^6.8.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^5.3.1",
     "husky": "^6.0.0",
-    "jest": "^25.1.0",
+    "jest": "^25.5.4",
     "lint-staged": "^11.0.0",
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^3.0.0",
     "prettier": "^2.3.1",
-    "style-loader": "^1.1.3",
-    "stylelint": "^13.2.0",
+    "style-loader": "^2.0.0",
+    "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0",
     "ts-jest": "^25.2.1",
-    "ts-loader": "^9.2.1",
+    "ts-loader": "^9.2.3",
     "typescript": "^4.3.4",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.2"
+    "webpack": "^5.39.1",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.8.0"
   },
   "engines": {
     "node": "12",
@@ -54,8 +63,6 @@
       "prettier --write"
     ]
   },
-  "name": "@ridedott/frontend-assignment-base",
-  "repository": "https://github.com/ridedott/frontend-assignment-base",
   "scripts": {
     "format": "prettier --check \"**/*.{css,js,json,md,ts,yml,yaml}\"",
     "format:fix": "prettier --write \"**/*.{css,js,json,md,ts,yml,yaml}\"",
@@ -67,9 +74,9 @@
     "lint:fix": "run-p lint:*:fix",
     "lint:ts": "eslint --resolve-plugins-relative-to \"./node_modules/@ridedott/eslint-config\" \"**/*.ts\"",
     "lint:ts:fix": "eslint --fix --resolve-plugins-relative-to \"./node_modules/@ridedott/eslint-config\" \"**/*.ts\"",
-    "start": "webpack-dev-server --config ./webpack.config.js",
+    "start": "webpack serve --config @config/webpack.dev.js --progress",
+    "build": "webpack --mode production --config @config/webpack.prod.js",
     "test": "jest",
     "types": "tsc --noEmit"
-  },
-  "version": "1.0.0"
+  }
 }
