--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "stylelint-order": "^4.1.0",
     "ts-jest": "^25.2.1",
     "ts-loader": "^9.2.3",
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "^4.3.4",
     "webpack": "^5.39.1",
     "webpack-cli": "^4.7.2",
